--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ dnspython==2.6.1
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==23.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.1
 pymongo==4.8.0
 python-dotenv==1.0.1
 requests==2.32.3
